# setupscheduler

./: .dockerignore  Dockerfile  README.md
scheduler-web/: app.vue  nuxt.config.ts  package-lock.json  package.json
scheduler-web/app/: spa-loading-template.html
scheduler-web/components/: ActionDialog.vue  DrawSchedule.vue  FileChooser.vue  FileDeleteDialog.vue  FileUploadDialog.vue  ScheduleList.vue  SettingsCalc.vue  SettingsInput.vue  SettingsOutput.vue
scheduler-web/layouts/: default.vue
scheduler-web/pages/: index.vue
scheduler-web/pages/render/: [filename].vue
scheduler-web/server/api/: help.get.js  scheduler.post.js  version.get.js
scheduler-web/server/api/instances/: [filename].delete.js  [filename].get.js  index.get.js  index.post.js
scheduler-web/server/api/schedules/: [filename].delete.js  [filename].get.js  index.get.js
scheduler-web/server/utils/: runScheduler.js
setupscheduler/: .gitignore  CMakeLists.txt  autogen.sh  basic.c  basic.h  ctimer.h  generate.c  generate.h  json.c  json.h  jump.c  jump.h  main.c  nonpreempt.c  preempt.c  prepare.c  prepare.h  schedule.h  search.c  search.h  split.c  test.c  test.h  types.h  validate.c  validate.h
